added final changes + form

--- a/index.html
+++ b/index.html
@@ -72,6 +72,26 @@
             </section>
         </section>
 
+        <section id="dailyNewsSection">
+            <section id="newsIntroduction">
+                <h1>DAILY NEWS!</h1>
+                <p>
+                    <i>Here you will find our daily catalogue of news articles related to your favourite writers / recorders.</i>
+                </p>
+            </section>
+            <section id="newsSection">
+                <ul id="news">
+                    <li>
+                        <h3>The Perils of Falling Asleep to Audiobooks</h3>
+                        <p>One moment, you're in a thrilling mystery—next, you wake up three hours later with no idea who the killer is!</p>
+                    </li>
+                    <li>
+                        <h3>The Audiobook Speed Dilemma...</h3>
+                        <p>Listen too slow, and it feels like forever; speed it up, and suddenly everyone sounds like caffeinated chipmunks!</p>
+                    </li>
+                </ul>
+            </section>
+        </section>
 
         <section id="teamSection">
             <p>An audiobook platform made for those who <b>love</b> audiobooks, by people who also <b>love</b> audiobooks! </p>
