--- a/loyalty-prog.html
+++ b/loyalty-prog.html
@@ -56,19 +56,19 @@
         <section id="formSection">
             <form id="loyaltyForm">
                 <section class="formRow">
-                    <label for="fname">First name:</label>
+                    <label for="fname" id="standardLabel">First name:</label>
                     <input type="text" id="fname" name="fname" required>
                 </section>
                 <section class="formRow">
-                    <label for="lname">Last name:</label>
+                    <label for="lname" id="standardLabel">Last name:</label>
                     <input type="text" id="lname" name="lname" required>
                 </section>
                 <section class="formRow">
-                    <label for="email">Email:</label>
+                    <label for="email" id="standardLabel">Email:</label>
                     <input type="email" id="email" name="email" required>
                 </section>
                 <section class="formRow">
-                    <label for="acceptTOS">Accept our: <a href="tos.html">TOS</a></label>
+                    <label for="acceptTOS">Accept our: <a href="/loyalty-prog.html">TOS</a></label>
                     <input type="checkbox" id="acceptTOS" name="acceptTOS" required>
                 </section>
                 <button type="submit">Submit</button>
