--- a/product.html
+++ b/product.html
@@ -63,17 +63,17 @@
         <h1>Hear from our previous customers:</h1>
 
         <section class="cardsSection">
-            <section class="card">
+            <section id="card1" class="card">
                 <h3>Emma W.</h3>
                 <p>"Online Audio Books has an amazing selection of audiobooks. The audio quality is fantastic, and the prices are reasonable."</p>
                 <section class="stars">★★★★★</section>
             </section>
-            <section class="card">
+            <section id="card2" class="card">
                 <h3>John P.</h3>
                 <p>"I love how easy it is to find and purchase audiobooks. The website is user-friendly, and the customer support is excellent."</p>
                 <section class="stars">★★★★☆</section>
             </section>
-            <section class="card">
+            <section id="card3" class="card">
                 <h3>Sophie M.</h3>
                 <p>"The variety of genres and authors available is impressive. I’ve discovered so many great books through Online Audio Books."</p>
                 <section class="stars">★★★★★</section>
