added final changes

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
             <section id="newsSection">
                 <ul id="news">
                     <li>
-                        <h3>The Perils of Falling Asleep to Audiobooks</h3>
+                        <h3><a href="index.html">The Perils of Falling Asleep to Audiobooks</a></h3>
                         <p>One moment, you're in a thrilling mystery—next, you wake up three hours later with no idea who the killer is!</p>
                     </li>
                     <li>
-                        <h3>The Audiobook Speed Dilemma...</h3>
+                        <h3><a href="index.html">The Audiobook Speed Dilemma...</a></h3>
                         <p>Listen too slow, and it feels like forever; speed it up, and suddenly everyone sounds like caffeinated chipmunks!</p>
                     </li>
                 </ul>
